src/objects/AReport_Review_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Gap2__c</fullName>
        <formula>IF(Text(Activity_Gap__c)=&apos;5&apos;,&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Activity Gap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Gap__c</fullName>
        <label>Activity Gap</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachments_Comments__c</fullName>
        <label>Attachments Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attachments_Rating__c</fullName>
        <inlineHelpText>Rate this on a scale of 1 to 10 (1 being poor and 10 being excellent)</inlineHelpText>
        <label>Attachments Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachments_Ratings2__c</fullName>
        <formula>IF(Text(Attachments_Rating__c)=&apos;5&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachments Ratings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Billing_Guidelines2__c</fullName>
        <formula>IF(text(Case_Note_Entries_Billing_Guidelines__c	)=&apos;7&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Note Entries - Billing Guidelines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Billing_Guidelines__c</fullName>
        <label>Case Note Entries - Billing Guidelines</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Clarity2__c</fullName>
        <formula>IF(TEXT(Case_Note_Entries_Clarity__c)=&apos;2&apos;, &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Note Entries - Clarity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Clarity__c</fullName>
        <inlineHelpText>0=unclear
3=clear</inlineHelpText>
        <label>Case Note Entries - Clarity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Comments__c</fullName>
        <inlineHelpText>Case Note Entries Rating Comments</inlineHelpText>
        <label>Case Note Entries Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Correct_Codes2__c</fullName>
        <formula>IF(Text( Case_Note_Entries_Correct_Codes__c )=&apos;2&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Case Note Entries - Correct Codes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Correct_Codes__c</fullName>
        <label>Case Note Entries - Correct Codes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Exist2__c</fullName>
        <formula>IF(TEXT(Case_Note_Entries_Exist__c)=&apos;2&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Case Note Entries - Exist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Exist__c</fullName>
        <label>Case Note Entries - Exist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Justification2__c</fullName>
        <formula>IF(Text( Case_Note_Entries_Justification__c)=&apos;2&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Case Note Entries - Justification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Justification__c</fullName>
        <label>Case Note Entries - Justification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Note_Entries_Total_Rating__c</fullName>
        <formula>VALUE(TEXT(Case_Note_Entries_Billing_Guidelines__c)) + VALUE(TEXT(Case_Note_Entries_Clarity__c)) + VALUE(TEXT(Case_Note_Entries_Correct_Codes__c)) + VALUE(TEXT(Case_Note_Entries_Exist__c)) + VALUE(TEXT(Case_Note_Entries_Justification__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Note Entries Total Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Report_Opportunity__c</fullName>
        <label>Case Report / Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Report_Review_Rating</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Communication_History_Comments__c</fullName>
        <label>Communication History Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_History_Rating__c</fullName>
        <inlineHelpText>Rate this on a scale of 1 to 10 (1 being poor and 10 being excellent)</inlineHelpText>
        <label>Communication History Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirm_Appointments_EE2__c</fullName>
        <formula>IF(TEXT(Confirm_Appointments_EE__c)=&apos;5&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Confirm Appointments EE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Appointments_EE__c</fullName>
        <inlineHelpText>Did the NCM call a day before or same day to confirm appointments with the EE?</inlineHelpText>
        <label>Confirm Appointments EE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_Appointments_MD2__c</fullName>
        <formula>IF(TEXT(Confirm_Appointments__c)=&apos;5&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Confirm Appointments MD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Appointments__c</fullName>
        <inlineHelpText>Did the NCM call a day before or same day to confirm appointments with the MD?</inlineHelpText>
        <label>Confirm Appointments MD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Roles_Comments__c</fullName>
        <label>Contact Roles Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Roles_Rating__c</fullName>
        <inlineHelpText>Rate this on a scale of 1 to 10 (1 being poor and 10 being excellent)</inlineHelpText>
        <label>Contact Roles Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coverage_Team__c</fullName>
        <inlineHelpText>Did the NCM utilize coverage for this report?</inlineHelpText>
        <label>Coverage Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_between_last_a_v_submission__c</fullName>
        <formula>Case_Report_Opportunity__r.Report_Submission_Date__c  - Most_Recent_Date_of_Appointment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between last a/v &amp; submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_last_a_v_1st_submission__c</fullName>
        <formula>X1st_Submission_Date__c  -  Most_Recent_Date_of_Appointment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days - last a/v &amp; 1st submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defense_Attorney2__c</fullName>
        <formula>IF(TEXT(Defense_Attorney__c)=&apos;5&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Defense Attorney</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defense_Attorney_Comment__c</fullName>
        <label>Defense Attorney Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Defense_Attorney__c</fullName>
        <label>Defense Attorney</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Attorney2__c</fullName>
        <formula>IF(TEXT(Employee_Attorney__c)=&apos;5&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Employee Attorney</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Attorney_Comments__c</fullName>
        <label>Employee Attorney Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Attorney__c</fullName>
        <label>Employee Attorney</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Comments__c</fullName>
        <label>Employer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Section2__c</fullName>
        <formula>IF(TEXT(Employer_Section__c)=&apos;5&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Employer Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Section__c</fullName>
        <label>Employer Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Healthcare_Provider_Comments__c</fullName>
        <label>Healthcare Provider Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Healthcare_Provider_rating__c</fullName>
        <inlineHelpText>Rate this on a scale of 1 to 10 (1 being poor and 10 being excellent)</inlineHelpText>
        <label>Healthcare Provider Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_appointments_on_this_report2__c</fullName>
        <formula>IF(TEXT(How_many_appointments_on_this_report__c)=&apos;15&apos;,&apos;True&apos;,&apos;False&apos;)</formula>
        <label>How many appointments on this report?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_appointments_on_this_report__c</fullName>
        <inlineHelpText>Please fill in the amount of appointments on this report</inlineHelpText>
        <label>How many appointments on this report?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Date_of_Appointment_Comment__c</fullName>
        <inlineHelpText>Reason for no appointment this reporting period</inlineHelpText>
        <label>Most Recent Date of Appointment Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Date_of_Appointment__c</fullName>
        <inlineHelpText>Please fill in the most recent date of appointment on this report</inlineHelpText>
        <label>Most Recent Date of Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Show__c</fullName>
        <inlineHelpText>How many times did the NCM Travel to a visit but the EE was a no show?</inlineHelpText>
        <label>No Show</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_A_Rating__c</fullName>
        <formula>VALUE(TEXT(Timeliness__c)) + VALUE(TEXT(Case_Note_Entries_Billing_Guidelines__c)) + VALUE(TEXT(Case_Note_Entries_Clarity__c))  + VALUE(TEXT(Case_Note_Entries_Correct_Codes__c)) + VALUE(TEXT(Case_Note_Entries_Exist__c)) + VALUE(TEXT(Case_Note_Entries_Justification__c)) + VALUE(TEXT(Confirm_Appointments_EE__c)) + VALUE(TEXT(Confirm_Appointments__c))  + VALUE(TEXT(How_many_appointments_on_this_report__c)) + VALUE(TEXT(Responsive_to_QC_Emails_Rating__c)) + VALUE(TEXT(Activity_Gap__c)) + VALUE(TEXT(QSU_Timeliness__c)) + VALUE(TEXT(Attachments_Rating__c)) + VALUE(Text(Defense_Attorney__c))  + VALUE(TEXT( Employee_Attorney__c )) + VALUE(TEXT( Employer_Section__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall A Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QSU_Timeliness2__c</fullName>
        <formula>IF(TEXT(QSU_Timeliness__c)=&apos;15&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>QSU Timeliness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QSU_Timeliness__c</fullName>
        <label>QSU Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <inlineHelpText>What queue are you completing this review for?</inlineHelpText>
        <label>Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Submission_Date__c</fullName>
        <formula>Case_Report_Opportunity__r.Report_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsive_to_QC_Emails_Comments__c</fullName>
        <label>Responsive to QC Emails Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responsive_to_QC_Emails_Rating2__c</fullName>
        <formula>IF(TEXT(Responsive_to_QC_Emails_Rating__c)=&apos;5&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Responsive to QC Emails Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsive_to_QC_Emails_Rating__c</fullName>
        <inlineHelpText>Rate this on a scale of 1 to 10 (1 being poor and 10 being excellent)</inlineHelpText>
        <label>Responsive to QC Emails Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Report_Comment_s__c</fullName>
        <label>Return Report Comment(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Report__c</fullName>
        <inlineHelpText>Is this report being returned?</inlineHelpText>
        <label>Return Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes, first time</fullName>
                </value>
                <value>
                    <fullName>Yes, second time</fullName>
                </value>
                <value>
                    <fullName>Yes, third time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_TEST__c</fullName>
        <formula>ABS(Most_Recent_Date_of_Appointment__c  -  Case_Report_Opportunity__r.Report_Submission_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC TEST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervised_by__c</fullName>
        <formula>TEXT(Case_Report_Opportunity__r.Related_Case__r.Supervised_by__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervised by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeliness2__c</fullName>
        <formula>IF(TEXT(Timeliness__c)=&apos;15&apos;,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Timeliness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeliness_Comment__c</fullName>
        <inlineHelpText>If the report was not submitted in a timely manner please make comment.</inlineHelpText>
        <label>Timeliness Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Timeliness__c</fullName>
        <inlineHelpText>Was this report submitted within the reporting timelines?</inlineHelpText>
        <label>Timeliness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Submission_Date__c</fullName>
        <label>1st Submission Date</label>
        <type>Date</type>
    </fields>
    <label>A - Report Review / Rating</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>A - Report Review / Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A - Report Review /Rating</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>